re PR middle-end/22480 (ICE in convert_move, at expr.c:390 with -ftree-vectorize)

2005-09-14  Uros Bizjak  <uros@kss-loka.si>

        PR middle-end/22480
        * tree-vect-transform.c (vectorizable_operation): Return false for
        scalar shift operations and for vector shift operations with
        non-invariant shift arguments.  Use scalar tree operand op1 as
        a shift operand when vector shift insn pattern uses scalar shift
        operand.
        * Makefile.in (tree-vect-transform.o): Depend on recog.h.

From-SVN: r104264